# warzone2100

./: CMakeLists.txt  Makefile.am  autorevision.h.cmake  configure.ac
cmake/modules/: CMakeParseArguments.cmake  FindFreetype2.cmake  FindIconv.cmake  FindYACC.cmake
lib/: CMakeLists.txt
lib/exceptionhandler/: CMakeLists.txt
lib/framework/: CMakeLists.txt
lib/gamelib/: CMakeLists.txt
lib/iniparser/: CMakeLists.txt
lib/ivis_opengl/: CMakeLists.txt  piedraw.cpp  piemode.cpp  piestate.cpp  screen.cpp  tex.cpp
lib/netplay/: CMakeLists.txt  Makefile.am
lib/script/: CMakeLists.txt
lib/sequence/: CMakeLists.txt
lib/sound/: CMakeLists.txt
lib/widget/: CMakeLists.txt
macosx/Warzone.xcodeproj/: project.pbxproj
macosx/configs/: FetchSource.sh  MiniUPnPc-All.xcconfig  Project-All.xcconfig  Warzone-Debug.xcconfig  Warzone-Release.xcconfig
po/: CMakeLists.txt  Makefile.in.in  po-update.cmake  pot-update.cmake  remove-commentlines.cmake  stamp-po.cmake  update-po.sh
src/: CMakeLists.txt  Makefile.am  display3d.cpp  droid.c  game.c  hci.c  init.cpp  intdisplay.c  intdisplay.cpp  loop.c  map.c  mission.c  multiplay.c  power.c  power.h  research.c  scriptai.c  scriptfuncs.c  structure.c  structuredef.h  terrain.cpp  texture.cpp
win32/libs/: Makefile
